--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href=" 	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
   <!-- Link CSS -->
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -150,7 +151,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12">
             <div class="card mb-3">
               <div class="row g-2">
                 <div class="col-md-4">
@@ -167,7 +168,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12">
             <div class="card mb-3">
               <div class="row g-2">
                 <div class="col-md-4">
@@ -184,7 +185,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12">
             <div class="card mb-3">
               <div class="row g-2">
                 <div class="col-md-4">
@@ -201,7 +202,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12">
             <div class="card mb-3">
               <div class="row g-2">
                 <div class="col-md-4">
@@ -218,7 +219,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12">
             <div class="card mb-3">
               <div class="row g-2">
                 <div class="col-md-4">
@@ -235,7 +236,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12">
             <div class="card mb-3">
               <div class="row g-2">
                 <div class="col-md-4">
@@ -268,8 +269,7 @@
           <div class="col-lg-5">
             <img class="w-100 img-fluid" src="images/working.png" alt="Exploring">
           </div>
-          <div class="col-lg-7 px-5 bg-success d-flex align-items-center justify-content-center" style="  --bs-bg-opacity: .1;
-">
+          <div class="col-lg-7 px-5 bg-success d-flex align-items-center justify-content-center" style="  --bs-bg-opacity: .1; ">
             <div class="exploring-info">
               <h3 class="fw-semibold fs-1 me-5 lh-base">Explore The elearning Institute</h3>
               <p class="text-muted lh-lg">There are many variations of passages of Lorem Ipsum available, but the
@@ -363,7 +363,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-6">
             <div class="card">
               <img src="images/student/student-1.png" class="card-img-top" alt="Student">
               <div class="card-body">
@@ -372,7 +372,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-6">
             <div class="card">
               <img src="images/student/student-2.png" class="card-img-top" alt="Student">
               <div class="card-body">
@@ -381,7 +381,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-6">
             <div class="card">
               <img src="images/student/student-3.png" class="card-img-top" alt="Student">
               <div class="card-body">
@@ -390,7 +390,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-6">
             <div class="card">
               <img src="images/student/student-4.png" class="card-img-top" alt="Student">
               <div class="card-body">
@@ -422,8 +422,8 @@
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <div class="row gap-4 justify-content-between">
-                  <div class="col-lg-6 p-5 border">
+                <div class="row feedback_control gap-4 justify-content-between">
+                  <div class="col-lg-6 col p-5 border">
                     <div class="img-ratings d-flex justify-content-between align-items-center">
                       <img class="img-fluid mb-2" src="images/comma.png" alt="''">
                       <div class="ratings">
@@ -445,7 +445,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-6 p-5 border">
+                  <div class="col-lg-6 col p-5 border">
                     <div class="img-ratings d-flex justify-content-between align-items-center">
                       <img class="img-fluid mb-2" src="images/comma.png" alt="''">
                       <div class="ratings">
@@ -470,8 +470,8 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="row gap-4 justify-content-between">
-                  <div class="col-lg-6 p-5 border">
+                <div class="row feedback_control gap-4 justify-content-between">
+                  <div class="col col-lg-6 p-5 border">
                     <div class="img-ratings d-flex justify-content-between align-items-center">
                       <img class="img-fluid mb-2" src="images/comma.png" alt="''">
                       <div class="ratings">
@@ -493,7 +493,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-6 p-5 border">
+                  <div class="col col-lg-6 p-5 border">
                     <div class="img-ratings d-flex justify-content-between align-items-center">
                       <img class="img-fluid mb-2" src="images/comma.png" alt="''">
                       <div class="ratings">
@@ -621,7 +621,7 @@
     </section>
 
     <!-- Companies -->
-    <section id="companies">
+    <section id="companies" class="d-lg-block d-sm-none d-md-none">
       <div class="container">
         <div class="row">
           <div class="common-heading py-5 pe-5 text-center">
@@ -629,15 +629,35 @@
           </div>
         </div>
         <div class="row pb-5">
-          <div class="col-lg-2"><a href="#"><img src="images/company/company-1.png" alt="Company"></a></div>
-          <div class="col-lg-2"><a href="#"><img src="images/company/company-2.png" alt="Company"></a></div>
-          <div class="col-lg-2"><a href="#"><img src="images/company/company-3.png" alt="Company"></a></div>
-          <div class="col-lg-2"><a href="#"><img src="images/company/company-4.png" alt="Company"></a></div>
-          <div class="col-lg-2"><a href="#"><img src="images/company/company-5.png" alt="Company"></a></div>
-          <div class="col-lg-2"><a href="#"><img src="images/company/company-6.png" alt="Company"></a></div>
+          <div class="col-lg-2"><a href="#"><img class="img-fluid" src="images/company/company-1.png" alt="Company"></a></div>
+          <div class="col-lg-2"><a href="#"><img class="img-fluid" src="images/company/company-2.png" alt="Company"></a></div>
+          <div class="col-lg-2"><a href="#"><img class="img-fluid" src="images/company/company-3.png" alt="Company"></a></div>
+          <div class="col-lg-2"><a href="#"><img class="img-fluid" src="images/company/company-4.png" alt="Company"></a></div>
+          <div class="col-lg-2"><a href="#"><img class="img-fluid" src="images/company/company-5.png" alt="Company"></a></div>
+          <div class="col-lg-2"><a href="#"><img class="img-fluid" src="images/company/company-6.png" alt="Company"></a></div>
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer id="footer" class="bg-dark text-white">
+      <div class="container">
+        <div class="row p-5">
+          <div class="col-lg-3 mx-auto text-center">
+            <h2>Effective Tech</h2>
+            <small>Office 41, Zawaya Buildin, Ghala Muscat,
+            Sultanate of Oman</small>
+            <a href="#" class="text-white">Privacy</a> | <a class="text-white" href="#">Policy</a>
+            <div class="social-meida mt-2">
+                <a class="d-inline-block mx-2 p-2 text-dark bg-light rounded-circle" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a class="d-inline-block mx-2 p-2 text-dark bg-light rounded-circle" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a class="d-inline-block mx-2 p-2 text-dark bg-light rounded-circle" href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a class="d-inline-block mx-2 p-2 text-dark bg-light rounded-circle" href="#"><i class="fa-brands fa-tiktok"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </main>
 
   <script src=" 	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
